Fix text-align

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -35,7 +35,6 @@ p {
   width: 80%;
   max-width: 75ch;
   font-size: 1rem;
-  text-align: center;
 }
 
 button {
